--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 }
 
 .container{
+    position: relative;
     width: 60%;
     height: 550px;
     background-color: antiquewhite;
@@ -84,7 +85,21 @@ button{
     gap: 20px;
 }
 
-.cadastro div button{
+.cadastro .container-passwords{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.container-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cadastro .voltar-login button{
     font-size: 0.8rem;
     background-color: transparent;
     color: #F2780C;
@@ -94,13 +109,13 @@ button{
 }
 
 .parede{
-    position: fixed;
-    width: 30%;
+    position: absolute;
+    width: 50%;
     height: 550px;
-    margin-left: 30%;
+    right: 0;
     background-color: #8C0303;
     border-radius: 20px;
-    transition: all 0.5s;
+    transition: all 1s;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,4 +125,50 @@ button{
     width: 60%;
     background-position: center;
     background-size: cover;
+}
+
+@media only screen and (max-width: 700px) {
+    .container{
+        width: 80%;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .login{
+        width: 100%;
+        height: 50%;
+        gap: 15px;
+    }
+
+    .cadastro{
+        width: 100%;
+        height: 50%;
+        gap: 15px;
+    }
+
+    button{
+        padding: 2px 10px;
+    }
+
+    .cadastro .container-passwords{
+        flex-direction: row;
+        gap: 20px;
+        padding: 0 25px;
+    }
+
+    .cadastro .container-passwords input{
+        width: 50%;
+    }
+
+    .container-buttons{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .parede{
+        margin-right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 275px;
+    }
 }
