--- a/style.css
+++ b/style.css
@@ -138,12 +138,14 @@ button{
         width: 100%;
         height: 50%;
         gap: 15px;
+        padding: 20px;
     }
 
     .cadastro{
         width: 100%;
         height: 50%;
         gap: 15px;
+        padding: 20px;
     }
 
     button{
