--- a/style.css
+++ b/style.css
@@ -138,14 +138,16 @@ button{
         width: 100%;
         height: 50%;
         gap: 15px;
-        padding: 20px;
     }
 
     .cadastro{
         width: 100%;
         height: 50%;
         gap: 15px;
-        padding: 20px;
+    }
+
+    input{
+        width: 50%;
     }
 
     button{
